* Massive CSS code - Updated responsivity on mobile devices - Fixed some bugs

--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -1,25 +1,27 @@
-/* Importazione font da API Google */
+/* import font from Google Font API */
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Marhey:wght@500&display=swap');
+
+/* Main properties for basic responsivity */
 body{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-content: space-around;
     background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    margin: 0;
+    height: 100vh;
 }
 
-/* Titolo */
+/* Title Style */
 .title{
     font-family: "Luckiest Guy";
     color: rgb(104, 47, 47);
-    font-size: 7em;
+    font-size: 10lvh;
     margin: auto;
+    margin-top: 2lvh;
     animation-duration: 1s;
     animation-name: titleAnimation;
     animation-iteration-count: infinite;
     animation-direction: alternate-reverse;
     text-shadow: 3px 3px 10px black;
-    padding-bottom: 1em;
     text-align: center;
 }
 @keyframes titleAnimation {
@@ -33,7 +35,7 @@ body{
     }
 }
 
-/*  Notifier  */
+/*  Notifier Style */
 .notifier{
     color: black;
     font-family: Marhey;
@@ -41,8 +43,9 @@ body{
     max-width: fit-content;
     margin: auto;
     border-radius: 30px;
-    padding: 1rem;
+    padding: 1lvh;
     margin-bottom: 10px;
+    font-size: 3lvh;
 }
 
 /*------------- INSTRUCIOTN OVERLAY ---------------*/
@@ -58,12 +61,22 @@ body{
 .instructionContainer{
     background-color: white;
     border-radius: 30px;
-    padding: 2rem;
+    font-size: 2.5lvh;
+    padding: 2lvh;
     max-width: 80%;
     margin: auto;
+    margin-top: 2lvh;
 }
 
-/* Form iniziale sulle impostazioni della partita */
+#showOverlayButton{
+    width: 8lvw;
+    height: 8lvh;
+    position: fixed;
+    left: 1lvh;
+    top: 1lvh;
+}
+
+/* Main form with settings */
 .formPlayer{
     border-radius: 15px;
     background-color: white;
@@ -71,7 +84,7 @@ body{
     width: 70%;
     margin: auto; 
     font-family: Marhey;
-    font-size: 1em;
+    font-size: 2lvh;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -79,7 +92,7 @@ body{
 }
 
 .playersContainer, .players{
-    font-size: 1em;
+    font-size: 3lvh;
     display: flex;
     flex-direction: column;
 }
@@ -88,45 +101,39 @@ body{
     box-shadow: 3px 3px 5px black;
     border-radius: 5px;
     padding: 0.8em;
-    width: 30%;
+    width: 60%;
     margin: auto;
     margin-bottom: 10px;
     border-style: solid;
     border-color: red;
     font-family: Marhey;
-    font-size: 1em;
+    font-size: 2lvh;
 }
 .button{
     display: flex;
     justify-content: space-evenly;
 }
 img{
-    width: 4em;
-    height: 4em;
+    width: 10lvw;
+    height: 10lvh;
     cursor: pointer;
     transition-property: transform;
     transition-duration: 500ms;
 }
 img:hover{ transform: scale(1.3,1.3); }
-.fullscreenButton{
-    width: 3em;
-    height: 3em;
-    position: fixed;
-    right: 2em;
-    top: 1em;
-}
 
-#showOverlayButton{
-    width: 6em;
-    height: 6em;
+.fullscreenButton{
+    width: 5lvw;
+    height: 5lvh;
     position: fixed;
-    left: 2em;
-    top: 1em;
+    right: 2lvw;
+    top: 1lvh;
 }
 
 /*------------------GAME SCENE CSS---------------------*/
 .gameScene{
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
@@ -140,36 +147,56 @@ img:hover{ transform: scale(1.3,1.3); }
     padding: 1em;
 }
 .scores, #endRoundBox{ 
-    min-width: 10em;    
-    margin-left: 3em;
+    min-width: fit-content;    
+    margin-left: 2lvh;
 }
 
 table, tr{
     min-width: 10em;
-    font-size: 1.1em;
+    font-size: 2lvh;
     cursor: pointer;
 }
 caption{ color: red; }
 
 #bombSVG{
     margin: auto;
-    width: 20em;
-    height: 20em;
+    width: 40lvw;
+    height: 40lvh;
 }
 .minimize{
-    font-size: 2em;
+    font-size: 4lvw;
     animation-direction:alternate;
 }
 
 #dice{ 
     color: red; 
-    font-size: 2em;
+    font-size: 4lvh;
 }
-#word{ font-size: 6em; }
+#word{ font-size: 8lvh; }
 
 footer{
     text-align: center;
-    font-size: 1.5em;
+    font-size: 3lvh;
     color: white;
-    margin-top: 2em;
+    margin-top: 8lvw;
+}
+
+/* Media query to apply responsive properties */
+@media only screen and (max-width: 414px), (orientation: portrait){
+    .title{
+        font-size: 6lvh;
+    }
+    .gameScene{
+        flex-direction: column;
+        max-width: min-content;
+        max-height: fit-content;
+        margin: auto;
+    }
+    .scores{
+        margin-left: 0;
+        margin-top: 2lvh;
+    }
+    table, tr{
+        font-size: 2lvh;
+    }
 }
